k8s/prod/esphome/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: esphome
  labels:
    name: esphome
