k8s/prod/esphome/esphome.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: 1.18.0
    helm.sh/chart: esphome-8.4.2
  name: esphome
  namespace: esphome
spec:
  ports:
  - name: http
    port: 6052
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmap.reloader.stakater.com/reload: esphome
    secret.reloader.stakater.com/reload: esphome
  labels:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: 1.18.0
    helm.sh/chart: esphome-8.4.2
  name: esphome
  namespace: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: esphome
      app.kubernetes.io/name: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: esphome
        app.kubernetes.io/name: esphome
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: ESPHOME_DASHBOARD_USE_PING
          value: "true"
        image: "esphome/esphome:2026.9.1"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        name: esphome
        ports:
        - containerPort: 6052
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 15m
            memory: 105M
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - SYS_ADMIN
          privileged: true
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /configmap
          name: configmap
        - mountPath: /secrets
          name: secrets
        - mountPath: /config
          name: tmp-config
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      serviceAccountName: default
      volumes:
      - configMap:
          name: esphome
        name: configmap
      - name: secrets
        secret:
          secretName: esphome #pragma: allowlist secret
      - emptyDir: {}
        name: tmp-config
