k8s/prod/esphome/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: esphome
spec:
  defaultBackend:
    service:
      name: esphome
      port:
        number: 6052
  ingressClassName: tailscale
  tls:
  - hosts:
    - esphome
