k8s/prod/esphome/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: esphome-redirect
  namespace: esphome
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`esphome.kube.marcyoung.us`)
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: esphome
          port: 6052
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: esphome
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-esphome-staging
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`esphome.kube.marcyoung.us`)
      services:
        - name: esphome
          port: 6052
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
  tls:
    secretName: esphome-cert
